# psrdb

./: .buildinfo  .gitignore  .readthedocs.yaml  README.md  database_structure.html  genindex.html  how_to_use.html  index.html  installation.html  objects.inv  observation_ingest.html  psrdb.py  psrdb_modules.html  pyproject.toml  search.html  searchindex.js  settings.ini  test_pipelines.py  utils.py
.github/workflows/: pytest.yaml  sphinx.yml
_sources/: database_structure.md.txt  psrdb_modules.rst.txt
dev_scripts/: REAME.md  chunks_of_pulsars.py  create_data_release.py  generate_all_jsons.sh  generate_all_jsons_molonglo.sh  generate_all_jsons_search.sh  generate_all_results_jsons_molonglo.sh  ingest_molonglo_results.py  test_basic_database.sh  update_pulsar_descriptions.py  update_pulsar_name.sh
docs/: calibration.rst  class_finder.sh  cli.rst  conf.py  database_structure.md  how_to_use.md  index.rst  installation.md  observation_ingest.md  psrdb_modules.rst  requirements.txt
joins/: __init__.py
meerdb/joins/: folded_observations.py  graphql_join.py  processed_observations.py  pulsar_launches.py  toaed_observations.py
meerdb/tables/: basebandings.py  calibrations.py  collections.py  ephemerides.py  filterbankings.py  foldings.py  graphql_table.py  instrumentconfigs.py  launches.py  observations.py  pipelinefiles.py  pipelineimages.py  pipelines.py  processingcollections.py  processings.py  programs.py  projects.py  pulsars.py  pulsartargets.py  sessions.py  targets.py  telescopes.py  templates.py  toas.py
psrdb/: graphql_client.py  graphql_query.py  graphql_table.py  load_data.py
psrdb/data/: l_band_gain_calibrators.csv  molonglo_phasing.txt  polarisation_calibrators.csv  s_band_gain_calibrators.csv  uhf_band_gain_calibrators.csv
psrdb/joins/: folded_observations.py  graphql_join.py  pulsar_launches.py  (+2 more)
scripts/: ingest.py  ingest_ptuse_folded.py  ingest_ptuse_search.py  psrdb.py  remove_fluxcals.py
tables/: __init__.py  basebandings.py  calibrations.py  collections.py  ephemerides.py  foldings.py  graphql_query.py  observations.py  pipelinefiles.py  programs.py  sessions.py  telescopes.py  toas.py
tests/: generate_all_jsons.sh  helpers.py  test_basebandings.py  test_basic_database.sh  test_calibrations.py  test_cli_queries.py  test_client.py  test_collections.py  test_ephemerides.py  test_filterbankings.py  test_foldings.py  test_graphql_client.py  test_header_parse.py  test_ingest_obs.py  test_instrumentconfigs.py  test_launches.py  test_observations.py  test_pipelinefiles.py  test_pipelineimages.py  test_pipelines.py  test_processingcollections.py  test_processings.py  test_programs.py  test_projects.py  test_pulsars.py  test_pulsartargets.py  test_pytuse_folded.py  test_sessions.py  test_targets.py  test_telescopes.py  test_templates.py  test_toa.py  test_toas.py
util/: decimal.py  ephemeris.py  header.py  time.py
(+64 files in other folders)
