[tool.poetry]
name = "psrdb"
version = "0.1.0"
description = "CLI for pulsars.org.au"
authors = ["GWDC"]
license = "MIT"
packages = [{include = "psrdb"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"

[tool.poetry.scripts]
psrdb = "psrdb.scripts.psrdb:main"
ingest = "psrdb.scripts.ingest:main"
ingest_ptuse_folded = "psrdb.scripts.ingest_ptuse_folded:main"
ingest_ptuse_search = "psrdb.scripts.ingest_ptuse_search:main"
remove_fluxcals = "psrdb.scripts.remove_fluxcals:main"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
