[tool.poetry]
name = "psrdb"
version = "2.0.0"
description = "CLI for pulsars.org.au"
authors = ["GWDC"]
license = "MIT"
packages = [{include = "psrdb"}]

[tool.poetry.dependencies]
python = "^3.8.1"
requests = "^2.25.1"
pytest = "^7.3.1"
python-decouple = "^3.8"

[tool.poetry.scripts]
psrdb = "psrdb.scripts.psrdb:main"
generate_meerkat_json = "psrdb.scripts.generate_meerkat_json:main"
ingest_obs = "psrdb.scripts.ingest_obs:main"
remove_fluxcals = "psrdb.scripts.remove_fluxcals:main"


[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
isort = "^5.12.0"
black = "^23.3.0"
flake8 = "^6.0.0"
urllib3 = "<2"
responses = "^0.23.1"
sphinx = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
target_version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(\.git/
  |\.eggs
  |__pycache__
  |\.cache
  |\.ipynb_checkpoints
  |\.mypy_cache
  |\.pytest_cache
  |\.tox
  |\.venv
  |src/templates
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 120

[flake8]
max-line-length = 119
