[tool.poetry]
name = "psrdb"
version = "3.0.2"
description = "CLI for pulsars.org.au"
authors = ["GWDC"]
license = "MIT"
packages = [{include = "psrdb"}]

[tool.poetry.scripts]
psrdb = "psrdb.scripts.psrdb:main"
generate_meerkat_json = "psrdb.scripts.generate_meerkat_json:main"
ingest_obs = "psrdb.scripts.ingest_obs:main"
remove_fluxcals = "psrdb.scripts.remove_fluxcals:main"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
python-decouple = "^3.8"
pulsar-paragraph = "^1.0.1"

[tool.poetry.group.docs.dependencies]
numpydoc = "^1.5.0"
sphinx = "^7.2.4"
myst-parser = "^2.0.0"
sphinx-rtd-theme = "^1.3.0"
sphinx-argparse = "^0.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
isort = "^5.12.0"
black = "^23.3.0"
flake8 = "^6.0.0"
urllib3 = "<2"
responses = "^0.23.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
